Fix homepage and add screenshots

--- a/src/components/DesignComparator.astro
+++ b/src/components/DesignComparator.astro
@@ -56,6 +56,7 @@ const { src } = Astro.props;
         position: absolute;
         display: grid;
         place-items: center;
+        height: 100%;
     }
 
     .container-design {
