--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -43,7 +43,7 @@ const currentPath = Astro.url.pathname;
         display: flex;
         align-items: center;
         justify-content: start;
-        padding-left: 20%;
+        padding-left: 18.5%;
         gap: 48px;
         list-style-type: none;
         background: rgba(255, 255, 255, 0.04);
@@ -99,12 +99,13 @@ const currentPath = Astro.url.pathname;
         display: flex;
         align-items: center;
         gap: 200px;
-        padding-left: 20%;
+        padding-left: 9.5%;
     }
 
     .line {
         position: absolute;
         width: 65%;
+        min-width: 473px;
         height: 1px;
         background: white;
         opacity: 0.25;
