--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,8 @@ import Layout from '../layouts/Layout.astro';
 		display: grid;
 		grid-template-columns: 50% 50%;
 		place-items: center;
+		padding-top: 150px;
+		padding-left: 40px;
 		width: 100%;
 		height: 100%;
 		background-image: url('/assets/home/background-home-desktop.jpg');
@@ -54,7 +56,7 @@ import Layout from '../layouts/Layout.astro';
 		place-items: center;
 		text-decoration: none;
 		top: 50%;
-		left: 60%;
+		left: 58%;
 		transform: translateX(-50%);
 		width: 274px;
 		height: 274px;
@@ -92,6 +94,7 @@ import Layout from '../layouts/Layout.astro';
 			grid-template-columns: 1fr;
 			grid-template-rows: 50% 50%;
 			padding-top: 202px;
+			padding-left: 0px;
 			place-items: center;
 			min-height: 1024px;
 			background-image: url('/assets/home/background-home-tablet.jpg');
@@ -109,6 +112,7 @@ import Layout from '../layouts/Layout.astro';
 	@media screen and (width < 768px) {
 		main {
 			padding-top: 0px;
+			padding-left: 0px;
 			min-height: 667px;
 			height: 667px;
 			grid-template-rows: 333.5px 333.5px;
