--- a/src/components/Article.astro
+++ b/src/components/Article.astro
@@ -23,6 +23,7 @@ const { overtitle, title, body } = Astro.props;
         gap: 24px;
         width: 445px;
         padding-right: 5px;
+        padding-top: 160px;
     }
 
     h1 {
@@ -54,6 +55,7 @@ const { overtitle, title, body } = Astro.props;
             text-align: center;
             width: 444px;
             padding-right: 0px;
+            padding-top: 0px;
         }
 
         .overtitle {
@@ -73,6 +75,7 @@ const { overtitle, title, body } = Astro.props;
             width: 327px;
             height: 276px;
             gap: 16px;
+            padding-top: 0px;
         }
 
         h1 {
