--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -131,9 +131,22 @@ const crewJson = JSON.stringify(crew);
 			display: flex;
 			flex-direction: column-reverse;
 			min-height: 710px;
-			height: 710px;
-			justify-content: start;
+			height: 100%;
+			justify-content: center;
 			background-image: url('/assets/crew/background-crew-mobile.jpg');
+			background-position: center bottom;
+		}
+
+		@keyframes zoomInOut {
+			0% {
+				background-size: 120%;
+			}
+			50% {
+				background-size: 140%;
+			}
+			100% {
+				background-size: 120%;
+			}
 		}
 
 		.left-side {
