--- a/src/pages/technology.astro
+++ b/src/pages/technology.astro
@@ -127,6 +127,18 @@ const technologyJSON = JSON.stringify(technology);
 			position: relative;
         }
 
+		@keyframes zoomInOut {
+			0% {
+				background-size: 110%;
+			}
+			50% {
+				background-size: 140%;
+			}
+			100% {
+				background-size: 110%;
+			}
+		}
+
 		.title-container {
 			position: absolute;
 			top: 88px;
